--- a/index.html
+++ b/index.html
@@ -15,15 +15,18 @@
     <!-- <p></p> introduction text/greeting -->
     <p>We are pleased to inform you that you have been accepted at Hogwarts School of Witchcraft and Wizardry. Term begins on September 1. We await your owl by no later than July 31.</p>
   </div>
-  <div>
-    <form>
-      <!-- New Student Form -->
-      <div class="form-floating mb-3">
-         <input type="text" class="form-control" id="floatingInput" style="width: 50%" placeholder="Name Here">
-          <label for="floatingInput">Incoming First Year</label>
-      </div>
-    </form>
-  </div>
+  <form>
+   <!-- New Student Form -->
+   <div class="floater">
+    <div class="form-floating mb-3">
+      <input type="text" class="form-control" id="name" style="width: 50%" placeholder="Name Here">
+      <label for="floatingInput">First Year's Name</label>
+    </div>
+    <div class="create">
+      <button type="submit" class="btn btn-create" id="form-submit"></button>
+    </div>
+   </div>
+  </form>
   <div>
     <div class="btn-group" role="group" aria-label="Basic mixed styles example">
       <button type="button" class="btn btn-all-houses" id="show-all">All Houses</button>
@@ -34,10 +37,11 @@
     </div>
   </div>
   <div class="app"></div>
-  <div class="container">
-
+  <div class="new-in"></div>
+  <div class="expelled"></div>
+  
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
   <script src="main.js"></script>
-  </div>
+  
 </body>
 </html>
