--- a/index.html
+++ b/index.html
@@ -7,19 +7,23 @@
   <title>Sorting Hat</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
   <link href="main.css" rel="stylesheet">
+  <link href="https://fonts.cdnfonts.com/css/harry-potter" rel="stylesheet">
 </head>
+<style>
+  body {background-image: url(https://cdn.pixabay.com/photo/2015/12/03/08/50/paper-1074131__480.jpg);}
+</style>
 <body>
   <div class="intro-text">
     <!-- <h2></h2> Introduction -->
     <h2>Welcome to Hogwarts School of Witchcraft and Wizardry!</h2>
     <!-- <p></p> introduction text/greeting -->
-    <p>We are pleased to inform you that you have been accepted at Hogwarts School of Witchcraft and Wizardry. Term begins on September 1. We await your owl by no later than July 31.</p>
+    <p id="paragraph">We are pleased to inform you that you have been accepted at Hogwarts School of Witchcraft and Wizardry. Term begins on September 1. We await your owl by no later than July 31.</p>
   </div>
   <form>
    <!-- New Student Form -->
    <div class="floater">
     <div class="form-floating mb-3">
-      <input type="text" class="form-control" id="name" style="width: 50%" placeholder="Name Here">
+      <input type="text" class="form-control" id="name" styler="width:50%" placeholder="Name Here">
       <label for="floatingInput">First Year's Name</label>
     </div>
     <div class="create">
@@ -36,9 +40,10 @@
       <button type="button" class="btn btn-yellow" id="show-yellow">Hufflepuff</button>
     </div>
   </div>
-  <div class="app"></div>
-  <div class="new-in"></div>
-  <div class="expelled"></div>
+  <div class="student-containers">
+    <div id="new-in"></div>
+    <div id="expelled"></div>
+  </div>
   
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
   <script src="main.js"></script>
