--- a/index.html
+++ b/index.html
@@ -44,6 +44,9 @@
     <div id="new-in"></div>
     <div id="expelled"></div>
   </div>
+  <div class="dark">
+    <button type="button" class="btn btn-dark" id="show-dark"></button>
+  </div>
   
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
   <script src="main.js"></script>
