--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
    <!-- New Student Form -->
    <div class="floater">
     <div class="form-floating mb-3">
-      <input type="text" class="form-control" id="name" styler="width:50%" placeholder="Name Here">
+      <input type="text" class="form-control" id="name" placeholder="Name Here">
       <label for="floatingInput">First Year's Name</label>
     </div>
     <div class="create">
